--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
     </section>
 
     <section>
+      <h1>Stay in touch</h1>
+      <ul>
+        <li>email: hello@codecumbria.org</li>
+        <li>Twitter: @codecumbria</li>
+        <li>IRC: #codecumbria on Freenode</li>
+      </ul>
+    </section>
+
+    <section>
       <h1>Next Generation Virtual Reality - Occulus Rift</h1>
       <h3><a href="https://twitter.com/mytuanghel">Mihai Anghel</a></h3>
     </section>
